--- a/index.html
+++ b/index.html
@@ -1,46 +1,76 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
+<html lang="fi">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Etusivu</title>
 
-  <!-- Basic Page Needs
-  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-  <meta charset="utf-8">
-  <title>Your page title here :)</title>
-  <meta name="description" content="">
-  <meta name="author" content="">
+    <!-- Basic Page Needs -->
+    <meta name="description" content="" />
+    <meta name="author" content="Toomas Selkänen" />
 
-  <!-- Mobile Specific Metas
-  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!-- FONT -->
+    <link
+      href="//fonts.googleapis.com/css?family=Raleway:400,300,600"
+      rel="stylesheet"
+      type="text/css"
+    />
 
-  <!-- FONT
-  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-  <link href="//fonts.googleapis.com/css?family=Raleway:400,300,600" rel="stylesheet" type="text/css">
+    <!-- CSS -->
+    <link rel="stylesheet" href="css/normalize.css" />
+    <link rel="stylesheet" href="css/skeleton.css" />
+    <link rel="stylesheet" href="css/navbar.css" />
 
-  <!-- CSS
-  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-  <link rel="stylesheet" href="css/normalize.css">
-  <link rel="stylesheet" href="css/skeleton.css">
-
-  <!-- Favicon
-  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-  <link rel="icon" type="image/png" href="images/favicon.png">
-
-</head>
-<body>
-
-  <!-- Primary Page Layout
-  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-  <div class="container">
-    <div class="row">
-      <div class="one-half column" style="margin-top: 25%">
-        <h4>Basic Page</h4>
-        <p>This index.html page is a placeholder with the CSS, font and favicon. It's just waiting for you to add some content! If you need some help hit up the <a href="http://www.getskeleton.com">Skeleton documentation</a>.</p>
+    <!-- Favicon -->
+    <link rel="icon" type="image/png" href="images/favicon.png" />
+  </head>
+  <body>
+    <!-- Navigation -->
+    <div id="navbar" class="nav">
+      <div class="navContainer">
+        <img class="logo" src="images/favicon.png" />
+        <ul id="navUl">
+          <li><a href="/index.html">Etusivu</a></li>
+          <li><a href="/tutorials.html">Tutorials</a></li>
+          <li><a href="/about.html">About</a></li>
+          <li><a href="/test.html">Test</a></li>
+          <li><a href="/contact.html">Contact</a></li>
+        </ul>
       </div>
     </div>
-  </div>
+    <a id="menuBrgr" href="#"><img src="images/menuBrgr.svg" width="32px" /></a>
 
-<!-- End Document
-  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-</body>
+    <!-- Primary Page Layout -->
+    <div id="container" class="container" style="margin-top: 75px;">
+      <div class="row">
+        <div class="column" style="margin-top: 12%;">
+          <h4>Perusharjoitteet</h4>
+        </div>
+      </div>
+      <div class="row">
+        <div class="one-half column">
+          <p>Odin Projectin <a href="https://www.theodinproject.com/courses/web-development-101">Web Development 101 -osion</a> harjoitustehtävät.</p>
+          <p>Ei sisällä harjoitteita, joissa käytetty step-by-step -ohjeita.</p>
+        </div>
+        <div class="one-half column">
+          <ul>
+            <li>
+              <a href="perusharjoitteet/rps2.html">Kivi-sakset-paperi -peli</a>
+            </li>
+            <li>
+              <a href="perusharjoitteet/DOM-excercise.html">DOM manipulointi</a>
+            </li>
+            <li>
+              <a href="perusharjoitteet/Javascript-Drum-Kit.html"
+                >Javascript Rummut</a
+              >
+            </li>
+          </ul>
+        </div>
+      </div>
+    </div>
+
+    <!-- End of document -->
+    <script src="/javascript/navbar.js"></script>
+  </body>
 </html>
