added calculator, pomodoro clock, library w/o localStorage, array cardio link

--- a/index.html
+++ b/index.html
@@ -49,27 +49,50 @@
       </div>
       <div class="row">
         <div class="one-half column">
-          <p>Odin Projectin <a href="https://www.theodinproject.com/courses/web-development-101">Web Development 101 -osion</a> harjoitustehtävät.</p>
-          <p>Ei sisällä harjoitteita, joissa käytetty step-by-step -ohjeita.</p>
+          <p>Odin Projectin <a href="https://www.theodinproject.com/courses/web-development-101">Web Development 101 -kurssin</a> harjoitustehtävät.</p>
+          <p>Ei sisällä projekteja, joissa käytetty step‑by‑step -ohjeita.</p>
         </div>
         <div class="one-half column">
           <ul>
             <li>
-              <a href="perusharjoitteet/rps2.html">Kivi-sakset-paperi -peli</a>
+              <a href="/perusharjoitteet/rps2.html">Kivi-sakset-paperi -peli</a>
             </li>
             <li>
-              <a href="perusharjoitteet/DOM-excercise.html">DOM manipulointi</a>
+              <a href="/perusharjoitteet/Javascript-Drum-Kit.html">Näppäimistörummut</a>
             </li>
             <li>
-              <a href="perusharjoitteet/Javascript-Drum-Kit.html"
-                >Javascript Rummut</a
-              >
+              <a href="/https://github.com/Mieihe/javascript-excercises-and-tests">Sekalaisia Javascript tehtäviä</a><span> (GitHub)</span>
+            </li>
+            <li>
+              <a href="/perusharjoitteet/Calculator.html">Laskukone</a>
+            </li>
+            <li>
+              <a href="/perusharjoitteet/pomodoro.html">Pomodoro-kello</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+      <div class="row">
+        <div class="column" style="margin-top: 12%;">
+          <h4>Javascript-harjoitteet</h4>
+        </div>
+      </div>
+      <div class="row">
+        <div class="one-half column">
+          <p>Odin Projectin <a href="https://www.theodinproject.com/courses/javascript">Javascript-kurssin</a> harjoitustehtävät.</p>
+          <p>Ei sisällä projekteja, joissa käytetty step‑by‑step -ohjeita.</p>
+        </div>
+        <div class="one-half column">
+          <ul>
+            <li>
+              <a href="/javascript-harjoitteet/Library.html">"Kirjasto"</a>
             </li>
           </ul>
         </div>
       </div>
     </div>
-
+    <br>
+    <br>
     <!-- End of document -->
     <script src="/javascript/navbar.js"></script>
   </body>
