--- a/index.html
+++ b/index.html
@@ -42,15 +42,28 @@
 
     <!-- Primary Page Layout -->
     <div id="container" class="container" style="margin-top: 75px;">
-      <div class="row">
-        <div class="column" style="margin-top: 12%;">
+      <div class="row" style="margin-top: 12%;">
+        <div class="column">
           <h4>Perusharjoitteet</h4>
         </div>
       </div>
-      <div class="row">
+      <div class="row" style="margin-bottom: 6%;">
         <div class="one-half column">
           <p>Odin Projectin <a href="https://www.theodinproject.com/courses/web-development-101">Web Development 101 -kurssin</a> harjoitustehtävät.</p>
-          <p>Ei sisällä projekteja, joissa käytetty step‑by‑step -ohjeita.</p>
+          <p>Ensimmäiset askeleet Javascriptin maailmaan. Älä pelästy, jos löydät spagettikoodia tai huonoja ohjelmointikäytänteitä.</p>
+          <p><i>( Ei sisällä projekteja, joissa käytetty step‑by‑step -ohjeita.)</i></p>
+          <br>
+          <h5>Oppimistavoitteet:</h5>
+          <ul>
+            <li><b>Kasvaa ulos <i>"leikkaa-liimaa"</i> -ohjelmoinnista</b></li>
+            <li>Perustyökalujen käyttö</li> 
+            <ul>
+              <li><i></i>Git, Github, Linux terminal, IDE, browser Developer Tools</i></li>
+            </ul>
+            <li>HTML & CSS kertaus</li>
+            <li>Javascriptin ja puhtaan koodin perusteet</li>
+            <li>DOM manipulointi ja eventit</li>
+          </ul>
         </div>
         <div class="one-half column">
           <ul>
@@ -61,7 +74,7 @@
               <a href="/perusharjoitteet/Javascript-Drum-Kit.html">Näppäimistörummut</a>
             </li>
             <li>
-              <a href="/https://github.com/Mieihe/javascript-excercises-and-tests">Sekalaisia Javascript tehtäviä</a><span> (GitHub)</span>
+              <a href="https://github.com/Mieihe/javascript-excercises-and-tests">Sekalaisia Javascript tehtäviä</a><span> (GitHub)</span>
             </li>
             <li>
               <a href="/perusharjoitteet/Calculator.html">Laskukone</a>
@@ -72,20 +85,34 @@
           </ul>
         </div>
       </div>
-      <div class="row">
-        <div class="column" style="margin-top: 12%;">
+      <hr>
+      <div class="row" style="margin-top: 6%;">
+        <div class="column">
           <h4>Javascript-harjoitteet</h4>
         </div>
       </div>
-      <div class="row">
+      <div class="row" style="margin-bottom: 6%;">
         <div class="one-half column">
           <p>Odin Projectin <a href="https://www.theodinproject.com/courses/javascript">Javascript-kurssin</a> harjoitustehtävät.</p>
-          <p>Ei sisällä projekteja, joissa käytetty step‑by‑step -ohjeita.</p>
+          <p>Hyppy Javascriptin syvään päätyyn. Täältä löydät ensimmäisiä merkkejä älyllisestä elämästä ( ja ohjelmoinnista ).</p>
+          <p>( Ei sisällä projekteja, joissa käytetty step‑by‑step -ohjeita.&nbsp;)</p>
+          <br>
+          <h5>Oppimistavoitteet:</h5>
+          <ul>
+            <li><b>Oppia tuottamaan laadukasta ja skaalautuvaa koodia</b></li>
+            <li>Koodin organisointi ja ylläpidettävyys</li>
+              <ul>
+                <li><i>Module pattern, factory functions, OOP principles, classes, ES6 modules</i></li>
+              </ul>
+          </ul>
         </div>
         <div class="one-half column">
           <ul>
             <li>
-              <a href="/javascript-harjoitteet/Library.html">"Kirjasto"</a>
+              <a href="/javascript-harjoitteet/Library.html">Kirjahylly</a>
+            </li>
+            <li>
+              <a href="/javascript-harjoitteet/tic-tac-toe.html">Ristinolla</a>
             </li>
           </ul>
         </div>
